2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* data/gnome-lirc-properties.glade: Fix GTK+ warning on
	startup (Closes: #556552)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* data/receivers.conf:
	* gnome_lirc_properties/hardware.py: Add support for the Apple
	Mac Mini IR Receivers (Closes: #556599)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* configure.ac:
	* data/Makefile.am:
	* data/linux-input-layer-lircd.conf:
	* data/lirc-generate-linux-input.c (load_include), (set_warnings),
	(main): Add program to generate an updated
	linux-input-layer-lircd.conf from the installed linux headers,
	so that we avoid bitrot and missing keycodes (Helps: #555802)

2008-07-25  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Added Swedish translation.
	* help/Makefile.am: Added sv to DOC_LINGUAS.

0.2.8:

2008-07-01  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py:
	* gnome_lirc_properties/lirc.py: Fix the regexps looking
	for include statements in /etc/lircd.conf - the include syntax
	changed.

2008-07-01  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py: Remove authorization check
	by PID (IsProcessAuthorized) because we were checking the
	backend's PID, which is surely not authorized, and we have
	no way to get to the front-end's PID. Just check with the
	sender's D-Bus name instead (Closes: #540912).

2008-06-30  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/lirc.py: Handle the lircd.conf
	file being missing (it's not broken if it's not there!)
	(Closes: #540898).

2008-06-30  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py:
	* gnome_lirc_properties/ui/CustomConfiguration.py: Fix a few
	calls to lirc.find_remote_config(), which only returns the
	location of the config file now.

2008-06-30  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Remove "--resume" check
	* gnome_lirc_properties/backend.py: Remove use of the "--resume"