@@ -1,3 +1,10 @@
+2008-10-17  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome_lirc_properties/hardware.py: The Logitech Mini-Receivers, when
+	in HID mode, only show a portion of the keys on this interface (with a
+	separate keyboard and mouse still visible).  We shouldn't try to
+	configure that device (Closes: #541104)
+
 2008-10-16  Bastien Nocera  <hadess@hadess.net>
 
 	* data/gnome-lirc-properties.glade: Fix GTK+ warning on
